--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <div class="col-lg-12">
         <div class="panel panel-warning">
           <div class="panel-heading">
-            <h3 class="panel-title">Add Beer</h3>
+            <h3 class="panel-title"><strong>Add Beer</strong></h3>
           </div>
           <div class="panel-body">
             <form>
