--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
 
 
-      <div class="col-sm-6">
+      <div class="col-sm-6" id="userAccount">
         <div class="panel panel-warning">
           <div class="panel-heading">
             <h3 class="panel-title">
